--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@
     --cyan-dark: hsl(204, 86%, 50%);
 }
 
+.navbar-brand span.icon {
+    margin-inline-end: 1ex;
+}
+
 .section {
     padding: 1.5rem 3rem;
 }
